2010-03-01  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(stamps/cacao.stamp): Depend on rt.stamp
	and use updated rt.jar to build against rather
	than the contents of lib/rt, so that --with-openjdk
	builds work.

2010-03-01  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(stamps/plugin.stamp): Create stamp with the
	right filename.

2010-03-01  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(icedtea-against-icedtea): Convert to stamp
	and provide this as an alias.
	(icedtea-debug-against-icedtea): Likewise.
	(stamps/jtreg.stamp): Depend on
	stamps/icedtea-against-icedtea.stamp
	(stamps/tools.stamp): Converted from
	target relying on
	bootstrap/jdk1.7.0/jre/lib/tools.jar to
	a stamp target.
	(clean-tools-jar): Remove the stamp.
	(stamps/plugs.stamp): Depend on tools.stamp
	not the jar file itself.
	(icedtea): Match icedtea.stamp without bringing in
	additional dependencies.  icedtea-against-icedtea
	is equivalent to the old version.
	(icedtea-debug): Likewise.
	(tools-jar): New alias for tools.stamp

2010-03-01  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Patch should be added to ICEDTEA_ECJ_PATCHES
	not ICEDTEA_ENV_ECJ.

2010-03-01  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Remove errant backslash.

2010-03-01  Andrew John Hughes  <ahughes@redhat.com>

	Simply JAXWS patching for OpenJDK6.
	* Makefile.am,
	(NEED_JAXWS_SRC): Removed.
	(JAXWS_PATCHES): Removed.
	(ICEDTEA_ENV_ECJ): Add getdtdtype patch.
	(extract.stamp): Remove extract-jaxws dependency.
	(clean-extract): Remove clean-extract-jaxws dependency.
	(extract-jaxws.stamp): Removed.
	(clean-extract-jaxws): Removed.
	* patches/ecj/icedtea-jaxws-getdtdtype.patch:
	Updated to apply to JAXWS tree as a patch.

2009-11-17  Andrew John Hughes  <ahughes@redhat.com>

	* patches/ecj/icedtea-jaxws-getdtdtype.patch:
	Replace getDTDType method, don't add another.

2009-11-17  Andrew John Hughes  <ahughes@redhat.com>
